# HBTK

./: .gitignore  CMakeLists.txt  Doxyfile  HBTK.sln  LICENSE  README.md
Demo/: CMakeLists.txt
Demo/GaussLegendreTests_demo/: CMakeLists.txt  GaussLegendreTests_demo.cpp  GaussLegendreTests_demo.sln  GaussLegendreTests_demo.vcxproj  stdafx.cpp
Demo/GaussLegendreTests_demo/GaussLegendreTests_demo/: GaussLegendreTests_demo.cpp  GaussLegendreTests_demo.vcxproj  GaussLegendreTests_demo.vcxproj.filters
Demo/GaussQuadrature_demo/: CMakeLists.txt
Demo/GaussQuadrature_demo/GaussQuadrature_demo/: GaussQuadrature_demo.cpp
Demo/GmshParser_demo/: CMakeLists.txt  GmshParser_demo.sln
Demo/GmshParser_demo/GmshParser_demo/: GmshParser_demo.cpp  GmshParser_demo.vcxproj  GmshParser_demo.vcxproj.filters  stdafx.cpp
Demo/Plot3D_converter_demo/: CMakeLists.txt  Plot3D_converter_demo.sln
Demo/Plot3D_converter_demo/Plot3D_converter_demo/: Plot3D_converter_demo.cpp  Plot3D_converter_demo.vcxproj  Plot3D_converter_demo.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
Demo/Plot3D_converter_demo/Plot3D_converter_demo/TestFiles/: ascii_noblock_2d.p3d
Demo/RemapTests_demo/: CMakeLists.txt  RemapTests_demo.cpp  RemapTests_demo.sln  RemapTests_demo.vcxproj  RemapTests_demo.vcxproj.filters  stdafx.cpp
Demo/RemapTests_demo/RemapTests_demo/: RemapTests_demo.cpp  RemapTests_demo.vcxproj
HBTK/: BasicParser.h  CMakeLists.txt  Checks.cpp  Checks.h  Constants.h  ElementGoemetry.h  ElementNodes.h  FortranSequentialInputStream.cpp  FortranSequentialInputStream.h  FortranSequentialOutputStream.cpp  FortranSequentialOutputStream.h  GaussLegendre.h  GaussianQuadrature.cpp  Generators.cpp  Generators.h  GmshInfo.cpp  GmshInfo.h  GmshParser.cpp  GmshParser.h  GmshWriter.cpp  GmshWriter.h  GnuPlot.cpp  GnuPlot.h  HBTK.vcxproj  HBTK.vcxproj.filters  Integrators.h  NumericalDifferentiation.h  Plot3DParser.cpp  Plot3DParser.h  Plot3DWriter.cpp  Plot3DWriter.h  PotentialFlowDistributions.h  ReadMe.txt  Remaps.h  StructuredMeshBlock2D.cpp  StructuredMeshBlock2D.h  StructuredMeshBlock3D.cpp  StructuredMeshBlock3D.h  StructuredMeshValueBlockND.h  Tolerances.h
HBTK/include/: BasicParser.h  GaussianQuadrature.h  Generators.h  GmshParser.h  Interpolators.h  Plot3DWriter.h  PotentialFlowDistributions.h
HBTK/include/HBTK/: AerofoilGenerators.h  AerofoilParser.h  BasicParser.h  BasicTokeniser.h  CartesianFiniteLine.h  CartesianLine.h  CartesianPlane.h  CartesianPoint.h  CartesianRectilinearPanel.h  CartesianVector.h  Checks.h  Constants.h  CubicSpline1D.h  CubicSplineND.h  ElementGoemetry.h  ElementShapeFunctions.h  FortranSequentialInputStream.h  FortranSequentialOutputStream.h  GaussLegendre.h  GaussianQuadrature.h  Generators.h  GmshElementDataHolder.h  GmshInfo.h  GmshParser.h  GnuPlot.h  Integrators.h  Interpolators.h  NumericalDifferentiation.h  Paths.h  Plot3DParser.h  PotentialFlowDistributions.cpp  PotentialFlowDistributions.h  Remaps.h  RuntimeProfiler.h  StaticQuadrature.h  StructuredBlockIndexerND.h  StructuredMeshBlock2D.h  StructuredMeshBlock3D.h  StructuredMeshValueBlockND.h  StructuredValueBlockND.h  (+13 more)
HBTK/src/: AerofoilGenerators.cpp  AerofoilGeometry.cpp  AerofoilParser.cpp  Base64.cpp  CartesianFiniteLine.cpp  CartesianLine.cpp  CartesianPlane.cpp  CartesianPoint.cpp  CartesianRectilinearPanel.cpp  CartesianVector.cpp  Checks.cpp  ConformalMapping.cpp  CsvWriter.cpp  CubicSpline1D.cpp  DoubleTable.cpp  ElementShapeFunctions.cpp  FortranSequentialInputStream.cpp  FortranSequentialOutputStream.cpp  GaussLegendre.cpp  GaussianQuadrature.cpp  Generators.cpp  GmshElementDataHolder.cpp  GmshInfo.cpp  GmshMeshHolder.cpp  GmshNodeDataHolder.cpp  GmshParser.cpp  GnuPlot.cpp  Paths.cpp  Plot3DParser.cpp  Plot3DWriter.cpp  PotentialFlowDistributions.cpp  RuntimeProfiler.cpp  StaticQuadrature.cpp  StructuredMeshBlock2D.cpp  StructuredMeshBlock3D.cpp  Token.cpp  TokenModifiers.cpp  Tokeniser.cpp  VtkDataArray.cpp  VtkInfo.cpp  (+9 more)
Quad1D/: ElementNodes.h  GaussLegendre.h  Integrators.h  Quad1D.vcxproj  Quad1D.vcxproj.filters  ReadMe.txt  Remaps.h  Tolerances.h  stdafx.cpp
TestHBTK/: CMakeLists.txt  GMSH_test_file_1.msh  GMSH_test_file_1_binary.msh  TestDiff.cpp  TestGaussLegendre.cpp  TestGaussQuadrature.cpp  TestGmshParser.cpp  TestHBTK.vcxproj  TestHBTK.vcxproj.filters  TestIntegrators.cpp  TestRemaps.cpp  stdafx.cpp
TestHBTK/res/: GMSH_test_file_1.msh
TestHBTK/tests/: TestAerofoils.cpp  TestBase64.cpp  TestCartesianFiniteLine.cpp  TestCartesianLine.cpp  TestCartesianPlane.cpp  TestCartesianPoints.cpp  TestCartesianVector.cpp  TestChecks.cpp  TestCubicSpline1D.cpp  TestCubicSplineND.cpp  TestDiff.cpp  TestGaussQuadrature.cpp  TestGenerators.cpp  TestGmshParser.cpp  TestIntegrators.cpp  TestPaths.cpp  TestRemaps.cpp  TestTokeniser.cpp  TestTokenisers.cpp
TestQuad1D/: TestGaussLegendre.cpp  TestIntegrators.cpp  TestQuad1D.vcxproj  TestRemaps.cpp  stdafx.cpp
include/HBTK/: AerofoilGenerators.h  AerofoilGeometry.h  Base64.h  BasicParser.h  CartesianPoint.h  ConformalMapping.h  Constants.h  CsvWriter.h  CubicSplineND.h  DoubleTable.h  ElementGoemetry.h  ElementNodes.h  ElementShapeFunctions.h  FortranSequentialInputStream.h  GaussianQuadrature.h  GmshMeshHolder.h  GmshNodeDataHolder.h  GmshWriter.h  NumericalDifferentiation.h  RuntimeProfiler.h  StructuredBlockIndexerND.h  StructuredMeshBlock2D.h  StructuredValueBlockND.h  StructuredValueBlockNDIterator.h  Token.h  TokenModifiers.h  VtkCellType.h  VtkUnstructuredDataset.h  VtkUnstructuredMeshHolder.h  VtkWriter.h  VtkXmlArrayReader.h  XmlParser.h  XmlWriter.h
src/: AerofoilGenerators.cpp  AerofoilGeometry.cpp  AerofoilParser.cpp  BasicTokeniser.cpp  CartesianFiniteLine.cpp  Checks.cpp  CsvWriter.cpp  GaussLegendre.cpp  GmshInfo.cpp  GmshWriter.cpp  RuntimeProfiler.cpp  StructuredMeshBlock2D.cpp  Token.cpp  VtkUnstructuredMeshHolder.cpp  VtkWriter.cpp
test/tests/: TestAerofoils.cpp  TestBase64.cpp  TestChecks.cpp  TestCubicSpline1D.cpp  TestDiff.cpp  TestGenerators.cpp  TestGmshParser.cpp  TestRemaps.cpp
(+1 files in other folders)
